# ZebraGate

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  notify.bat  notify.ps1  上线须知.md
.github/workflows/: ci.yml  release.yml
app/: AGENTS.md  CLAUDE.md  README.en.md  README.fr.md  README.ja.md  README.md  README.zh_CN.md  README.zh_TW.md  main.go
app/common/: constants.go
app/controller/: billing.go  desktop.go  desktop_test.go  model_tag.go  model_tag_test.go  relay.go  user.go
app/i18n/: keys.go
app/middleware/: auth.go  auth_test.go  deprecated_web_api.go  desktop_auth.go  desktop_auth_test.go  logger.go  logger_test.go  utils.go
app/model/: gorm_logger_test.go  main.go  option.go
app/router/: api-router.go  deprecated_web_api_test.go  relay-router.go  video-router.go
app/service/: channel_affinity_usage_cache_test.go  error.go
app/setting/: model_tag.go  model_tag_test.go
app/types/: error.go  error_test.go
desktop/: .env.example  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/scripts/: check-i18n.mjs  check-i18n.test.ts
desktop/src/: App.test.ts  App.tsx  ErrorLogWindow.tsx  GroupManagementWindow.tsx  main.tsx  styles.css  test-setup.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/locales/: zh-CN.yml
desktop/src-tauri/src/: lib.rs
docs/: 20260622-1641-v1.0.0发布前手工测试方案.md
references/old-zebragate/: .env.example  .gitignore  AGENTS_bak20260612.md  CLAUDE.md  README.md  lib_rs.diff.txt  package.json  pnpm-lock.yaml  (+1 more)
(+206 files in other folders)
