[package]
name = "zebragate"
version = "0.1.0"
description = "ZebraGate desktop shell"
authors = ["ZebraGate"]
edition = "2021"

[lib]
name = "zebragate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8.9"
http = "1"
tower-http = { version = "0.7.0", features = ["cors"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
aes-gcm = "0.10"
rand = "0.10.1"
base64 = "0.22"
flate2 = "1"

[dev-dependencies]
tempfile = "3"
